# qdata

./: .env.example  .gitignore  README.md  pyproject.toml
apps/web/: README.md  index.html
dags/: daily_etl.py
docs/: DD4-研究验收记录.md  M1.5-生产回填验收.md  M3-开闸验收.md  下一阶段功能规划.md  下一阶段执行计划-命令手册.md  应用链路-开发计划.md  开发功能进度.md  开发计划手册.md  数据纵深与运维闭环-开发计划.md  数据采集操作说明.md  日频回测引擎-开发清单.md  日频回测引擎-架构与模块设计.md  运营后台-UI与前端架构设计.md  量化交易终端-UI设计规范.md  量化平台开发手册.md
schema/: clickhouse.sql
scripts/: dev_install.sh  ensure_import_path.py  install_daily_cron.sh  qdata.sh
src/qdata/: __init__.py  calendar.py  config.py  constants.py  db.py  notify.py  prod.py  publish.py  release.py  symbols.py
tests/: test_calendar.py  test_cost_model.py  test_dashboard_data.py  test_dashboard_p0.py  test_dashboard_p1_p2.py  test_data_api.py  test_dataapi_version_weights.py  test_dd1_depth.py  test_dd2_extras.py  test_dd3_factors.py  test_dd4_research.py  test_factors.py  test_factory.py  test_fetch_reuse.py  test_index_member.py  test_index_scd2.py  test_industry_scd2.py  test_joinquant.py  test_limits.py  test_m3_paper_risk.py  test_market_extras_channels.py  test_pit.py  test_prod.py  test_quality.py  test_symbols.py  test_sync_market_extras_range.py  test_ta.py  test_tushare.py
tests/api/: test_bff.py
tests/apps/: test_a207_a504.py  test_experiment_smoke.py  test_factor_monitor.py  test_paper_from_experiment.py  test_paper_mark.py  test_signal_paper.py
tests/jobs/: test_daily_factor_monitor.py
tests/research/: test_backtest_benchmark.py  test_backtest_broker.py  test_backtest_execution_adv.py  (+5 more)
(+154 files in other folders)
